# fan

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/RCSwitch/: CMakeLists.txt
components/app_hap_setup_payload/: CMakeLists.txt
components/app_wifi/: CMakeLists.txt
components/homekit/esp_hap_core/: CMakeLists.txt
components/homekit/esp_hap_mu_srp/: CMakeLists.txt
include/: fan.hpp  homekit.hpp
src/: CMakeLists.txt  Fan.cpp  Homekit.cpp  main.cpp
